# PracticeTDD

./: .gitmodules  Readme.md
googletes_practice_reverse/: CMakeLists.txt  CMakeLists_executable.txt
googletes_practice_reverse/lib/: Reverse.h
googletes_practice_reverse/references/: 15.2 — Classes and header files – Learn C++.url  In order to compare std_strings you should use EXPECT_EQ.url
googletes_practice_reverse/src/: Reverse.cpp  main.cpp
googletes_practice_reverse/tests/: utest-reverse.cpp
googletest_practice_triangle/: CMakeLists.txt  CMakeLists_ver#1_static_gtest_download.txt  CMakeLists_ver#2_dynamic_gtest_download.txt  README.md
googletest_practice_triangle/lib/: triangle.h
googletest_practice_triangle/src/: main.cpp  product.cpp  triangle.cpp
googletest_practice_triangle/tests/: utest-product.cpp  utest-triangle.cpp
msys2_gtest_fibonacci/: CMakeLists.txt  fibonacci.cpp  fibonacci.h  main.cpp
msys2_gtest_fibonacci/references/: Using CMake in MSYS2 - MSYS2.url  c++ - How to run tests and debug Google Test project in VS Code- - Stack Overflow.url
msys2_gtest_probe/: Readme.md  TutorialTddMsys2.url  triangle.cpp  triangle.h  triangle_test.cpp
optimizer/references/: Get started with CMake Tools on Linux.url
optimizer_practice/: CMakeLists.txt
optimizer_practice/lib/: product.h
optimizer_practice/references/: Run Google Tests for Your C++ Projects - by Markus Buchholz - Medium.url
optimizer_practice/src/: main.cpp  product.cpp
optimizer_practice/tests/: utest-product.cpp
